--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img"> 
+        <img class="top-cloud" src="cloud.png" alt="cloud-img"> 
         <h1>I'm Swarnava.</h1>
         <h2>A <span class="pro">pro</span>grammer.</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img class="mountain" src="images/mountains.png" alt="mountains-img"> 
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+        <img class="mountain" src="mountains.png" alt="mountains-img"> 
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="alex-img" src="images/profilepic.png" alt="profile-pic of Swarnava">
+          <img class="alex-img" src="profilepic.png" alt="profile-pic of Swarnava">
           <h2>Hello.</h2>
           <p>
               I'm a programmer and front-end web developer, learning everyday.
@@ -27,7 +27,7 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="code-img" src="images/skills1.png" alt="skills-pic">
+            <img class="code-img" src="skills1.png" alt="skills-pic">
             <h3>Education & Experience</h3>
             <p>
                Completed education from South Point High School and Shri Shikshayatan School...Currently pursuing BTech from Techno India University 
@@ -36,7 +36,7 @@
             </p>
           </div>
           <div class="skill-row">
-            <img class="spicy-img" src="images/spicyfood.png" alt="skill-pic2">
+            <img class="spicy-img" src="spicyfood.png" alt="skill-pic2">
             <h3>Hot Spicy Challenge</h3>
             <p>
                 Oh, but my best skill is definitely in savouring spicy, chilli food. I am the undisputed queen of spicy food challenges. Scipy Buldak Ramyeon and PeriPeri Chicken Wings are my favourites.
