--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img class="alex-img" src="profilepic.png" alt="profile-pic of Swarnava">
           <h2>Hello.</h2>
           <p>
-              I'm a programmer and front-end web developer, learning everyday.
+              I'm a programmer, front-end web developer and a cybersecurity enthusiast, learning every day.
               I ❤️ to munch on chocolates and yes I forgot to mention, I'm a foodie!
           </p>
         </div>
@@ -48,16 +48,17 @@
           <h2>Get In Touch</h2>
           <h3>If you love spicy food as much as I do.</h3>
           <p class="contact-message">Love having spicy food like me? Let's chat about how licious they are!
-             We can code while we have have some Buldak Ramyeon and Peri Peri Chicken Wings!
+             We can code while we have some Buldak Ramyeon and Peri Peri Chicken Wings!
           </p>
           <a class="btn" href="mailto:swarnavabiswas2003@gmail.com">CONTACT ME</a>
         </div>
       </div>
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.facebook.com/profile.php?id=100072595131806">Facebook</a>
-        <a class="footer-link" href="https://www.instagram.com/swarnava_03/">Instagram</a>
-        <a class="footer-link" href="https://twitter.com/alexroosevelt03">Twitter</a>
-        <p class="copyright-message">© 2022 Swarnava Biswas.</p>
+        <span><a href="https://www.facebook.com/profile.php?id=100088704337267" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a></span>
+        <span><a href="https://www.instagram.com/s.w.a.r.n.03/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a></span>
+        <span><a href="https://www.linkedin.com/in/swarnava-biswas-466952264/" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a></span>
+        <span><a href="https://twitter.com/alexroosevelt03" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a></span>
+        <p class="copyright-message">© 2024 Swarnava Biswas.</p>
       </div>
 </body>
 </html>
